--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -1,32 +1,64 @@
 .dashboard-container {
-    height: 100vh;
+    max-height: 100vh !important;
     position: relative;
     width: 100%;
+    padding: 24px 109px 116px 109px;
 }
 
 .dashboard-content {
-    padding: 24px 109px 116px 109px;
+    max-height: 100vh !important;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .dashboard-nav {
     background-color: transparent;
     border: none;
-    padding: 1rem 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 32px;
+}
+
+.searchInputContainer {
+    position: relative;
+    width: 69.7478%;
+    margin: 0 auto 48px;
+}
+
+.searchIcon {
+    position: absolute;
+    left: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
 }
 
 .search-input {
-    width: 300px;
-    border-radius: 10px;
-    border: 1px solid #E5E5E5;
-    padding: 0.5rem 1rem;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #e5e5e5;
+    padding: 0.5rem 1rem 0.5rem 2.5rem;
 }
 
 .add-item-btn {
+    width: 199px !important;
+    height: 44px !important;
     background-color: #FEAF00;
     border: none;
     border-radius: 10px;
     padding: 0.5rem 1.5rem;
     font-weight: 500;
+    color: white !important;
+    text-wrap: nowrap;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    align-self: flex-end;
 }
 
 .add-item-btn:hover {
@@ -34,7 +66,7 @@
 }
 
 .dashboard-tab-content {
-    padding: 1rem 0;
+    gap: 40px;
 }
 
 .loading-container {
@@ -72,4 +104,92 @@
 .pagination-container :global(.page-link:hover) {
     color: #F8D442;
     background-color: #fff;
+}
+
+.gapping-cards {
+    max-width: 100% !important;
+    row-gap: 40px;
+    justify-content: space-between;
+}
+
+.cards {
+    width: 21.8487%;
+    margin: 0;
+    padding: 0;
+}
+
+.numberIndicators {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.indicatorBtn {
+    background-color: transparent;
+    border: none;
+    color: #333333;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    margin: 0 5px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+
+.indicatorBtn:hover {
+    background-color: #f8d442;
+    color: #fff;
+    border-color: #f8d442;
+}
+
+.activeIndicator {
+    background-color: #FEAF00;
+    color: #fff;
+}
+
+.arrowBtn {
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #FEAF00;
+    cursor: pointer;
+    padding: 0 20px;
+}
+
+.arrowBtn:hover {
+    color: #f8d442;
+}
+
+:global(.carousel-control-prev),
+:global(.carousel-control-next) {
+    width: auto;
+    opacity: 1;
+}
+
+:global(.carousel-control-prev-icon),
+:global(.carousel-control-next-icon) {
+    background-color: #FEAF00;
+    border-radius: 50%;
+    padding: 20px;
+    background-size: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+:global(.carousel-control-prev-icon) {
+    margin-left: -50px;
+}
+
+:global(.carousel-control-next-icon) {
+    margin-right: -50px;
+}
+
+@media (max-width:992px) {
+    .dashboard-container {
+        max-height: 100vh !important;
+        position: relative;
+        width: 100%;
+        padding: 24px 80px 90px 80px;
+    }
 }
