--- a/src/pages/dashboard/ProductCard.module.css
+++ b/src/pages/dashboard/ProductCard.module.css
@@ -1,31 +1,31 @@
 .product-card {
-    width: 250px;
+    width: 100%;
+    height: 208px;
     cursor: pointer;
     position: relative;
     overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    box-shadow: 8px 8px 4px 0px #00000040;
     transition: transform 0.3s ease;
 }
 
 .product-card:hover {
-    transform: translateY(-5px);
+    transform: translateY(-2px);
 }
 
-.product-card :global(.card-img-top) {
-    height: 200px;
+.card-image {
     object-fit: cover;
+    object-position: center;
+    width: 100%;
 }
 
 .product-card :global(.card-body) {
-    padding: 1rem;
     text-align: center;
 }
 
 .product-card :global(.card-title) {
     font-weight: 600;
     font-size: 16px;
-    margin-bottom: 0.5rem;
 }
 
 .product-card :global(.card-text) {
@@ -43,18 +43,81 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.75);
-    gap: 1rem;
-    padding: 1rem;
+    background-color: #F2EAE1B2;
+    gap: 32px;
+    padding: 52.5px 19px;
 }
 
 .action-btn {
     width: 80%;
-    border-radius: 5px;
+    border-radius: 4px;
     font-weight: 500;
+    font-size: 14px;
+    line-height: 100%;
+    letter-spacing: 0%;
     transition: all 0.3s ease;
 }
 
 .action-btn:hover {
     transform: scale(1.05);
+}
+
+.product-name {
+    color: black;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.delete-message {
+    padding: 60px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.delete-text {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+}
+
+.delete-button {
+    background-color: #FEAF00;
+    border: none;
+    width: 30%;
+}
+
+.delete-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 80px;
+}
+
+@media (max-width:992px) {
+    .product-card {
+        width: 100%;
+        height: 150px;
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+        border-radius: 16px;
+        box-shadow: 8px 8px 4px 0px #00000040;
+        transition: transform 0.3s ease;
+    }
 }
