--- a/src/pages/dashboard/Sidebar.module.css
+++ b/src/pages/dashboard/Sidebar.module.css
@@ -1,8 +1,9 @@
 .sidebar {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
-    width: 270px;
+    width: 100%;
     padding: 35px 44px;
     background-color: #F2EAE1;
     color: white;
@@ -63,7 +64,6 @@
 .sidebar-nav {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     gap: 1rem;
     margin-bottom: 2rem;
 }
@@ -106,6 +106,7 @@
     line-height: 100%;
     letter-spacing: 0%;
     gap: 23px;
+    text-wrap: nowrap;
 }
 
 .logout-btn:hover {
